JWT funcional com login, registro e roles